--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,5 +20,8 @@
     <dimen name="image_thumbnail_size">100dp</dimen>
     <dimen name="image_thumbnail_spacing">1dp</dimen>
     <dimen name="image_detail_pager_margin">80dp</dimen>
+    <dimen name="teamTextSize">20sp</dimen>
+    <dimen name="scoreTextSize">80sp</dimen>
+    <dimen name="buttonTextSize">30sp</dimen>
 
 </resources>
